# backend-main

./: .gitignore  Procfile  README.md  key.py  package-lock.json  pyproject.toml  requirements.txt
contracts/: QuestRewards.sol
src/: alembic.ini  test.py
src/alembic/: env.py
src/alembic/versions/: 1e428f56bfc8_second_migration.py  48685e5904d9_added_contract_address_to_quest.py  56f39ad979a6_added_email_to_user_model.py  c395a6364ba1_first_migration.py  dd81d1ee6a07_second_migration.py
src/app/: main.py
src/app/api/: all_rxp.py  points_summary.py  quests.py  signature.py  user.py  user_rxp.py
src/app/apputils/: utils.py
src/app/config/: database_config.py
src/app/models/: models.py
src/app/providers/: all_rxp.py  points_summary.py  quest.py  signature.py  user_rxp.py  users.py
src/app/schemas/: schemas.py
